# brogue-tui

./: .gitignore  DECISIONS.md  DOGFOOD.md  Makefile  README.md  brogue.py  pyproject.toml
brogue_tui/: __init__.py  agent_api.py  app.py  engine.py  screens.py  tui.tcss
screenshots/: README.md  hero.tcell
tests/: api_qa.py  perf.py  playtest.py  qa.py  smoke_engine.py
